# Kubewise

./: .gitignore  README.md
.github/workflows/: ci.yaml  e2e.yaml  release.yaml
charts/container-resource-predictor/: .helmignore  Chart.yaml  values.yaml
charts/container-resource-predictor/templates/: NOTES.txt  _helpers.tpl  agent-daemonset.yaml  api-deployment.yaml  api-hpa.yaml  api-ingress.yaml  api-pdb.yaml  api-service.yaml  configmap.yaml  crd.yaml  pvc.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml  servicemonitor.yaml
charts/container-resource-predictor/tests/: crd_test.yaml  daemonset_test.yaml  deployment_test.yaml  hpa_test.yaml  rbac_test.yaml  service_test.yaml
dashboard/: .env.development  .env.production  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/cypress/e2e/: costs.cy.ts  navigation.cy.ts  recommendations.cy.ts
dashboard/cypress/support/: e2e.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  index.ts  websocket.ts
dashboard/src/components/: ProtectedRoute.tsx
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/hooks/: useAuth.ts  useWebSocket.ts
dashboard/src/lib/: authStorage.ts  oidc.ts
dashboard/src/pages/: Anomalies.tsx  AuthCallback.tsx  Clusters.tsx  Dashboard.tsx  Login.tsx  index.ts
dashboard/src/store/: hooks.ts  index.ts
dashboard/src/test/: setup.ts  utils.tsx
dashboard/src/types/: anomalies.ts  api.ts  auth.ts  clusters.ts  costs.ts  index.ts  recommendations.ts
docs/: api-reference.md  installation.md  openapi.yaml  user-guide.md
docs/examples/: grafana-dashboard.json  pricing-aws.yaml  pricing-azure.yaml  pricing-gcp.yaml  pricing-onprem.yaml  values-large-cluster.yaml  values-medium-cluster.yaml  values-small-cluster.yaml
ml-model/: .gitignore  README.md  export.py  generate_data.py  requirements.txt  train.py  validate.py
ml-model/models/: predictor.onnx.data  predictor_lstm.onnx.data
proto/: README.md  buf.gen.yaml  buf.yaml
proto/predictor/v1/: predictor.proto
recommendation-api/: .golangci.yaml  Dockerfile  Makefile  go.mod  go.sum
recommendation-api/cmd/server/: main.go
recommendation-api/internal/aggregator/: aggregator.go  aggregator_test.go
recommendation-api/internal/config/: config.go
resource-agent/: Cargo.toml  Dockerfile  rust-toolchain.toml
resource-agent/.cargo/: config.toml
resource-agent/crates/agent/: Cargo.toml
resource-agent/crates/agent-lib/: Cargo.toml  build.rs
resource-agent/crates/agent-lib/src/: health.rs  lib.rs  models.rs  observability.rs
resource-agent/crates/agent-lib/src/anomaly/: alerter.rs  leak_detector.rs  mod.rs  spike_detector.rs
resource-agent/crates/agent-lib/src/collector/: cgroup_v1.rs  cgroup_v2.rs  discovery.rs  loop.rs  mod.rs  tests.rs
resource-agent/crates/agent-lib/src/predictor/: features.rs  inference.rs  mod.rs  output.rs  scheduler.rs
resource-agent/crates/agent-lib/src/proto/: mod.rs
resource-agent/crates/agent-lib/src/proto/predictor/v1/: predictor.v1.rs  predictor.v1.tonic.rs
resource-agent/crates/agent-lib/src/sync/: buffer.rs  client.rs  mod.rs  model_update.rs  streaming.rs  tests.rs
resource-agent/crates/agent/src/: api.rs  config.rs  main.rs
resource-agent/crates/agent/tests/: api_tests.rs
resource-agent/crates/cli/: Cargo.toml
resource-agent/crates/cli/src/: client.rs  config.rs  main.rs  output.rs
resource-agent/crates/cli/src/commands/: costs.rs  debug.rs  mod.rs  recommendations.rs
resource-agent/crates/cli/tests/: cli_tests.rs
resource-agent/models/: embedded_model.rs  manifest.json  predictor.onnx  predictor_v1_0_0.onnx
test-app/: Dockerfile  Makefile  README.md  go.mod  go.sum
test-app/deploy/: services.yaml
test-app/e2e/: assertions.go  baseline_test.go  component_client.go  cpu_spike_test.go  e2e_test.go  helper.go  kubewise_client.go  memory_leak_test.go  time_aware_test.go  traffic_test.go  validation_report_test.go
test-app/hack/: install-kubewise.sh  install-test-app.sh  kind-config-ci.yaml  kind-config.yaml  mock-kubewise.yaml  run-e2e-tests.sh  setup-kind.sh  test-runner.yaml
(+143 files in other folders)
