[workspace]
members = ["crates/agent", "crates/agent-lib", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Container Resource Predictor Team"]
license = "Apache-2.0"
repository = "https://github.com/your-org/container-resource-predictor"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# ML inference - using tract for lightweight inference instead of ONNX Runtime
tract-onnx = "0.21"

# Metrics
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP server for health/metrics endpoints
axum = "0.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# Internal crates
agent-lib = { path = "crates/agent-lib" }
