[package]
name = "agent-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tract-onnx.workspace = true
prometheus.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
async-trait = "0.1"
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
dashmap = "5.5"

# TLS support
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
webpki-roots = "0.25"

# For SHA256 checksum validation
sha2 = "0.10"
hex = "0.4"

# For memory-mapped files
memmap2 = "0.9"

# For file watching (certificate rotation)
tokio-stream = "0.1"

# URL parsing
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.10"
