[package]
name = "resource-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "resource-agent"
path = "src/main.rs"

[dependencies]
agent-lib.workspace = true
tokio.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
axum.workspace = true
prometheus.workspace = true
anyhow.workspace = true
config.workspace = true
chrono.workspace = true

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
